<?xml version="1.0"?>
<package>
  <name>online_data_generator_msgs</name>
  <version>0.0.0</version>
  <description>The online_data_generator_msgs package</description>

  <maintainer email="higashide@jsk.imi.i.u-tokyo.ac.jp">taichiH</maintainer>

  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_msgs</run_depend>

</package>
